<resources>
    <string name="app_name">Unbeezy</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_title">UNBEEZY</string>
    <string name="web_client_id">758810798784-d520beidkqmq7muvfi6pm924go1dqf3b.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="schedule_tab">Sched</string>
    <string name="task_tab">Task</string>
    <string name="alarm_tab">Alarm</string>
    <string name="user_tab">User</string>
    <string name="to_do_list">To-Do List</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task_activity_label">Edit Task</string>
    <string name="alarm_on_toast">Alarm switched on!</string>
    <string name="alarm_off_toast">Alarm switched off!</string>
    <string name="task_title">Task Title</string>
    <string name="task_title_hint">Enter task title</string>
    <string name="save">Save</string>
    <string name="time_picker_hint">hh:mm</string>
    <string name="time">Time</string>
    <string name="date_picker_hint">dd/MM/yyyy</string>
    <string name="date">Date</string>
    <string name="sign_out_text">Sign Out</string>
</resources>
